Fix alignment mobile

--- a/src/components/NotFound/styles.css
+++ b/src/components/NotFound/styles.css
@@ -1,13 +1,13 @@
 .section-not-found {
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  padding-top: 30px;
 }
 
 .section-not-found h1 {
   font-size: 2em;
   font-weight: 800;
   text-transform: uppercase;
+  text-align: center;
 }
